Add support for markdown content, add playlist, simplify deployment, add logo project

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,1 @@
-{% extends "layout.html" %}
-
-{% block content %}
-        Lander
-{% endblock %}
+{% extends "layout.html" %} {% block content %} Lander {% endblock %}
