--- a/app/templates/playlists.html
+++ b/app/templates/playlists.html
@@ -1,13 +1,24 @@
-{% extends "layout.html" %}
-
-{% block content %}
-        <h1 class="text-2xl font-bold text-center my-4">Playlists</h1>
-        <div class="grid grid-cols-3 gap-4">
-            {% for playlist in playlists %}
-                <div class="bg-white shadow rounded p-4">
-                    <p class="font-semibold">{{ playlist.snippet.title }}</p>
-                    <img src="{{ playlist.snippet.thumbnails.default.url }}" alt="Playlist Thumbnail" class="w-full">
-                </div>
-            {% endfor %}
-        </div>
+{% extends "layout.html" %} {% block content %}
+<h1 class="text-2xl font-bold text-center my-4">Playlists</h1>
+<div class="grid grid-cols-3 gap-4">
+  {% for playlist in playlists %}
+  <a href="{{ url_for('playlist', playlist_id=playlist.id) }}">
+    <div class="bg-white shadow rounded p-4">
+      <p class="font-semibold">{{ playlist.snippet.title }}</p>
+      <picture>
+        <source
+          srcset="{{ playlist.snippet.thumbnails.high.url }}"
+          media="(min-width: 800px)"
+        />
+        <source srcset="{{ playlist.snippet.thumbnails.default.url }}" />
+        <img
+          src="{{ playlist.snippet.thumbnails.default.url }}"
+          alt="Playlist Thumbnail"
+          class="w-full"
+        />
+      </picture>
+    </div>
+  </a>
+  {% endfor %}
+</div>
 {% endblock %}
