--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %}
+{% block content %}
 <div class="bg-white shadow rounded p-4 text-center">
   <h1 class="text-2xl font-bold">Oops!</h1>
   <p class="text-lg">The page you are looking for could not be found.</p>
