--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,12 +1,15 @@
-{% extends "layout.html" %} {% block content %}
-<h1 class="text-2xl font-bold text-center my-4">About Channel</h1>
+{% extends "layout.html" %}
+{% block content %}
+<h1 class="text-2xl font-bold text-center my-4">
+  About {{ channel.snippet.title | safe }}
+</h1>
 <div class="bg-white shadow rounded p-4 text-center">
-  <img
-    src="{{ channel.brandingSettings.image.bannerExternalUrl }}"
-    alt="Banner"
-    class="w-full"
-  />
   <h2 class="text-xl font-bold mt-2">{{ channel.snippet.title }}</h2>
+  <img
+    src="{{ channel.snippet.thumbnails.medium.url }}"
+    alt="Logo"
+    class="mx-auto"
+  />
   <p class="mt-1">
     {{ channel.snippet.description | replace('\n', '<br />') | safe }}
   </p>
