--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -1,3 +1,7 @@
-{% extends "layout.html" %} {% block content %}
-<div class="prose lg:prose-xl">{{ content|safe }}</div>
+{% extends "layout.html" %}
+{% block content %}
+<br />
+<div class="bg-white shadow rounded p-4">
+  <div class="prose">{{ content|safe }}</div>
+</div>
 {% endblock %}
