--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -1,8 +1,15 @@
-{% extends "layout.html" %} {% block content %}
-<br />
+{% extends "layout.html" %}
+{% block content %}
+<h1 class="text-2xl font-bold text-center my-4">
+  {{ playlist.snippet.title | safe }}
+</h1>
 <nav class="bg-white shadow-md p-4">
   <ol class="list-reset flex text-gray-700">
     <li>
+      <a href="/" class="text-blue-500 hover:text-blue-700">Home</a>
+    </li>
+    <li>
+      <span class="mx-2">/</span>
       <a href="/playlists" class="text-blue-500 hover:text-blue-700"
         >Playlists</a
       >
@@ -13,11 +20,10 @@
     </li>
   </ol>
 </nav>
-<h1 class="text-2xl font-bold text-center my-4">
-  {{ playlist.snippet.title | safe }}
-</h1>
+<br />
 <div class="grid grid-cols-3 gap-4">
-  {% for video in playlist_videos %} {% if video.snippet.thumbnails %}
+  {% for video in playlist_videos %}
+  {% if video.snippet.thumbnails %}
   <div class="bg-white shadow rounded p-4">
     <a
       href="{{ url_for('playlist_video', playlist_id=playlist.id, video_id=video.snippet.resourceId.videoId ) }}"
@@ -37,6 +43,7 @@
       <p class="font-semibold mt-2">{{ video.snippet.title | safe }}</p>
     </a>
   </div>
-  {% endif %} {% endfor %}
+  {% endif %}
+  {% endfor %}
 </div>
 {% endblock %}
