--- a/app/templates/playlists.html
+++ b/app/templates/playlists.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %} {% block content %}
-<h1 class="text-2xl font-bold text-center my-4">Playlists</h1>
+<h1 class="text-2xl font-bold text-center my-4">
+  {{ channel.snippet.title | safe }} Playlists
+</h1>
 <div class="grid grid-cols-3 gap-4">
   {% for playlist in playlists %}
   <a href="{{ url_for('playlist', playlist_id=playlist.id) }}">
