--- a/app/templates/playlistvideo.html
+++ b/app/templates/playlistvideo.html
@@ -1,8 +1,15 @@
-{% extends "layout.html" %} {% block content %}
-<br />
+{% extends "layout.html" %}
+{% block content %}
+<h1 class="text-2xl font-bold text-center my-4">
+  {{ video.snippet.title | safe }}
+</h1>
 <nav class="bg-white shadow-md p-4">
   <ol class="list-reset flex text-gray-700">
     <li>
+      <a href="/" class="text-blue-500 hover:text-blue-700">Home</a>
+    </li>
+    <li>
+      <span class="mx-2">/</span>
       <a href="/playlists" class="text-blue-500 hover:text-blue-700"
         >Playlists</a
       >
@@ -21,13 +28,12 @@
     </li>
   </ol>
 </nav>
-<h1 class="text-2xl font-bold text-center my-4">
-  {{ video.snippet.title | safe }}
-</h1>
-
+<br />
 <div class="bg-white shadow rounded p-4">
   <div class="video-container my-4">
-    <div class="w-full h-full">{{ video.player.embedHtml|safe }}</div>
+    <div class="w-full h-full flex items-center justify-center">
+      {{ video.player.embedHtml|safe }}
+    </div>
   </div>
   <p>{{ video.snippet.description | replace('\n', '<br />') |safe }}</p>
 </div>
