--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %}
+{% block content %}
 <h2 class="text-xl font-bold text-center my-4">Shorts</h2>
 <div class="grid grid-cols-3 gap-4">
   {% for video in shorts %}
