--- a/app/templates/videos.html
+++ b/app/templates/videos.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block content %}
-<h1 class="text-2xl font-bold text-center my-4">Videos</h1>
+{% extends "layout.html" %}
+{% block content %}
+<h1 class="text-2xl font-bold text-center my-4">
+  {{ channel.snippet.title | safe }} Videos
+</h1>
 <div class="grid grid-cols-3 gap-4">
   {% for video in videos %}
   <div class="bg-white shadow rounded p-4">
